--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "git": "^0.1.5",
     "jsonp": "^0.2.1",
     "vue": "^2.4.2",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vue-resource": "^1.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
