--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jsonp": "^0.2.1",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
-    "vue-resource": "^1.2.1"
+    "vue-resource": "^1.2.1",
+    "better-scroll": "^0.1.15"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
