--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
     "vue-resource": "^1.2.1",
-    "better-scroll": "^0.1.15"
+    "better-scroll": "^0.1.15",
+    "axios": "^0.16.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
