--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue-router": "^2.7.0",
     "vue-resource": "^1.2.1",
     "better-scroll": "^0.1.15",
-    "axios": "^0.16.1"
+    "axios": "^0.16.1",
+    "vue-lazyload": "^1.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
